--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/route-parser": "^0.1.3",
     "@types/styled-components": "^5.1.1",
     "lorem-ipsum": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "route-parser": "0.0.5",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5"
   },
