--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
-    "start": "ts-node dist/app.js",
-    "build": "tsc -p ."
+    "start": "nodemon src/app.ts"
   },
   "author": "",
   "license": "ISC",
