--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,7 @@
       "esnext"
     ],
     "rootDir": "./src",
+    "outDir": "dist/",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
