--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,37 +4,29 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "route-parser": "0.0.5",
+    "styled-components": "^5.1.1"
+  },
+  "devDependencies": {
     "@types/node": "^12.12.53",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/route-parser": "^0.1.3",
     "@types/styled-components": "^5.1.1",
-    "axios": "^0.19.2",
-    "lorem-ipsum": "^2.0.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "route-parser": "0.0.5",
-    "styled-components": "^5.1.1",
-    "typescript": "^3.7.5"
-  },
-  "devDependencies": {
     "tslint": "^6.1.2",
-    "tslint-react": "^5.0.0"
+    "tslint-react": "^5.0.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tslint": "tslint --init",
-    "tslintconf": "tslint -c tslint.json 'src/**/*.ts'"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
